--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: CSAR
 Type: Package
 Title: Statistical tools for the analysis of ChIP-seq data
-Version: 1.1.2
+Version: 1.1.3
 Date: 2009-11-09
 Author: Jose M Muino
 Description: Statistical tools for ChIP-seq data analysis. The package includes the statistical  method described in Kaufmann et al. (2009) PLoS Biology: 7(4):e1000090. Briefly, Taking the average DNA fragment size subjected to sequencing into account, the software calculates genomic single-nucleotide read-enrichment values. After normalization, sample and control are compared using a test based on the Poisson distribution. Test statistic thresholds to control the false discovery rate are obtained through random permutation.
 Depends: R(>= 2.6.0)
 Maintainer: Jose M Muino <jose.muino@wur.nl>
+Suggests: ShortRead, Biostrings
 Imports: stats, utils
 License: Artistic-2.0
 biocViews: ChIPseq,Transcription,Genetics
