--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,5 @@ useDynLib(CSAR)
 exportPattern("^[^\\.]")
 importFrom(stats, ppois, var)
 importFrom(utils, read.table, write.table)
+importFrom(IRanges, Rle)
+importFrom(GenomicRanges,GRanges)
