--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,11 @@
 useDynLib(CSAR)
 exportPattern("^[^\\.]")
-importFrom(stats, ppois, var)
-importFrom(utils, read.table, write.table)
-importFrom(IRanges, Rle)
+importFrom(stats, ppois)
+importFrom(utils, write.table)
+importFrom(IRanges, IRanges)
 importFrom(GenomicRanges,GRanges)
+importMethodsFrom(IRanges, as.factor, lapply, nrow, paste, pmin.int,
+    rbind, rep.int, Rle, table, values, "values<-")
+importMethodsFrom(GenomicRanges, duplicated, intersect,
+    "seqlengths<-", seqnames, setdiff, sort, split, strand, unique,
+    unlist, width)
