resync with latest changes in GenomicRanges/GenomeInfoDb
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CSAR@89963 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,7 @@ useDynLib(CSAR)
 exportPattern("^[^\\.]")
 importFrom(stats, ppois)
 importFrom(utils, write.table)
-importFrom(IRanges, IRanges)
-importFrom(GenomicRanges,GRanges)
-importMethodsFrom(IRanges, as.factor, lapply, nrow, paste, pmin.int,
-    rbind, rep.int, Rle, table, values, "values<-")
-importMethodsFrom(GenomicRanges, duplicated, intersect,
-    "seqlengths<-", seqnames, setdiff, sort, split, strand, unique,
-    unlist, width)
+import(S4Vectors)
+import(IRanges)
+import(GenomeInfoDb)
+import(GenomicRanges)
