--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: CSAR
 Type: Package
 Title: Statistical tools for the analysis of ChIP-seq data
-Version: 1.17.0
+Version: 1.17.1
 Date: 2009-11-09
 Author: Jose M Muino
 Description: Statistical tools for ChIP-seq data analysis. The package
@@ -13,7 +13,7 @@ Description: Statistical tools for ChIP-seq data analysis. The package
         using a test based on the Poisson distribution. Test statistic
         thresholds to control the false discovery rate are obtained
         through random permutation.
-Depends: R (>= 2.15.0), IRanges, GenomicRanges
+Depends: R (>= 2.15.0), S4Vectors, IRanges, GenomeInfoDb, GenomicRanges
 Maintainer: Jose M Muino <jose.muino@wur.nl>
 Suggests: ShortRead, Biostrings
 Imports: stats, utils
