--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Statistical tools for ChIP-seq data analysis. The package
         thresholds to control the false discovery rate are obtained
         through random permutation.
 Depends: R (>= 2.15.0), S4Vectors, IRanges, GenomeInfoDb, GenomicRanges
-Maintainer: Jose M Muino <jose.muino@wur.nl>
+Maintainer: Jose M Muino <jose.muino@live.com>
 Suggests: ShortRead, Biostrings
 Imports: stats, utils
 License: Artistic-2.0
